--- a/app.json
+++ b/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "splash": {
+      "image" : "./assets/images/splash.png", 
+      "resizeMode": "contain",        
+      "backgroundColor": "#ffffff",   
+      "dark": {
+        "backgroundColor": "#000000"  
+      }
     }
   }
 }
